# Cpp-webserver

./: .clangd  CMakeLists.txt  Makefile  README.md  headers.h  main.cpp
static/: index.html
